feat: cleaned up search research, bug fixes

--- a/resources/scss/components/_stat.scss
+++ b/resources/scss/components/_stat.scss
@@ -31,6 +31,10 @@
         align-items: center;
         align-content: stretch;
     }
+
+    canvas.h-6 {
+        max-height: 1.5rem;
+    }
 }
 
 
